# warp-terminal

./: .gitignore  .rules  .rustc_info.json  CLAUDE.md  Cargo.toml  INITIAL.md  INTEGRATION_SUMMARY.md  README.md  TASKS.md  TODO.md  UI_DESIGN_COMPONENT_ANALYSIS.md  UI_RESTORATION_REPORT_20250803_051118.md  analyze.sh  code_analysis_tool.py  dev-env-setup.sh  main.rs  restore_complete_warp_ui.sh  restore_warp_config.sh  restore_warp_terminal_ui_design.sh  rust_code_review.sh  settings.json  update_analysis.py  update_summary.md  version_analysis.py
.claude/: settings.local.json
.github/: labels.yml
.github/workflows/: auto-labels.yml
backups/: latest.sqlite  settings_20250731_152918.json  settings_20250731_154943.json  settings_20250731_154955.json  settings_20250731_154958.json  settings_20250731_155001.json  settings_20250731_201341.json  settings_20250731_201714.json  settings_20250731_202602.json  settings_20250731_202608.json  settings_20250731_202613.json  settings_20250801_003314.json  settings_20250801_003334.json  settings_20250801_005337.json  settings_20250802_225525.json  settings_20250802_225559.json  settings_20250802_225619.json  warp_20250803_040106.sqlite
backups/full_restore_20250803_051117/config/: history.json  keybindings.json  logging.json  monitor.json  user_preferences.json
backups/rust_review_20250803_041809/: project_structure.txt  restoration_recommendations.md  todo_analysis.txt
config/: app_state.json  component_manifest.json  gui.json  ui_components.json  warp_theme.json
debug/: libwarp_directory.d  libwarp_directory.rlib  warp-directory  warp-directory.d
debug/.fingerprint/anstream-0a3eeca5447acfb2/: lib-anstream  lib-anstream.json
debug/.fingerprint/anstyle-0cda2e355294714a/: lib-anstyle  lib-anstyle.json
debug/.fingerprint/anstyle-parse-989635333f94159c/: lib-anstyle_parse  lib-anstyle_parse.json
debug/.fingerprint/anstyle-query-ce3c446114fd4ed3/: lib-anstyle_query  lib-anstyle_query.json
debug/.fingerprint/clap-cb8e2ffb8e00e4e9/: lib-clap  lib-clap.json
debug/.fingerprint/clap_builder-22e8f07d6da57803/: lib-clap_builder  lib-clap_builder.json
debug/.fingerprint/clap_lex-6b53c43d6bb281b7/: lib-clap_lex  lib-clap_lex.json
debug/.fingerprint/colorchoice-d1cbfb6b9b768ae8/: lib-colorchoice  lib-colorchoice.json
debug/.fingerprint/directories-d6fb082fddf101f1/: lib-directories  lib-directories.json
debug/.fingerprint/dirs-sys-f79fbfb295624203/: lib-dirs_sys  lib-dirs_sys.json
debug/.fingerprint/is_terminal_polyfill-bab7c999b0a51553/: lib-is_terminal_polyfill  lib-is_terminal_polyfill.json
debug/.fingerprint/itoa-01382d26da9f2965/: lib-itoa  lib-itoa.json
debug/.fingerprint/libc-a48aca6000eed364/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/libc-e4b4e51dadf9c551/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/libc-ead02d5dd3b2d1fc/: lib-libc  lib-libc.json
debug/.fingerprint/memchr-8204881569ab2901/: lib-memchr  lib-memchr.json
debug/.fingerprint/option-ext-36d3833acc88d831/: lib-option_ext  lib-option_ext.json
debug/.fingerprint/proc-macro2-17b373222485dfaf/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/proc-macro2-3a36bbf2824a5a60/: run-build-script-build-script-build  (+1 more)
docs/: sentry-setup.md
examples/: README.md  sentry_feature_demo.rs  simple_sentry_test.rs  test_sentry.rs
launch_configurations/: bash.json  default.yaml  zsh.json
monitor/: processes.json  stats.json
src/: lib.rs  main.rs
src/ai/: code_generator.rs
src/app/: core_architecture.rs  integration_example.rs  mod.rs  performance_management.rs  plugin_system.rs  terminal.rs
src/command/: history.rs  workflow_manager.rs
src/editor/: editor_state.rs  keybindings.rs  mod.rs  vim_mode.rs
src/executor/: advanced_commands.rs  mod.rs
src/input/: keyboard.rs
src/model/: block.rs  layout_persistence.rs  workflow_loader.rs  workflow_params.rs
src/monitoring/: mod.rs  sentry_integration.rs
src/shell/: shell_detector.rs
src/ui/: command_history.rs  command_palette.rs  modern_components.rs  pane.rs  quick_actions.rs  theme_selector.rs
tests/: command_history_test.rs  settings_persistence_test.rs
themes/: Cargo.toml
themes/examples/: basic_usage.rs  theme_cli.rs
themes/src/: analyzer.rs  builder.rs  color.rs  error.rs  iced_integration.rs  lib.rs  loader.rs  manager.rs  preview.rs  tabbed_pane.rs  theme.rs  validation.rs
themes/warp_bundled/: dark.yaml  enhanced_dark.yaml  enhanced_light.yaml  light.yaml
warp-server/: .env.dev  .gitignore  config.go  generate_test.go  go.mod  handlers.go  inspect-db.sh  main.go  restore-backup.sh  start-dev-server.sh
warp-server/fragment_embedding/: generate.go  generate_test.go  manager.go
warp_browser_exporter/: Cargo.toml
warp_browser_exporter/src/: main.rs
warp_log_inspector/: Cargo.toml  build.sh  index.html  warp_monitor.py  warp_monitor.sh
warp_log_inspector/dev-server/: .env.development  nohup.out  package-lock.json  package.json  server.js
warp_log_inspector/dev-server/client/: telemetry-client.js
warp_log_inspector/dev-server/middleware/: rudderstack-proxy.js  session-manager.js  telemetry-middleware.js
warp_log_inspector/src/: lib.rs
workflows/build_ts/: package-lock.json
workflows/workflow-types/: Cargo.toml
(+145 files in other folders)
