
[workspace]

[package]
name = "warp_log_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlInputElement",
  "HtmlElement",
  "Element",
  "EventTarget",
  "Event",
  "InputEvent",
  "MouseEvent",
] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
gloo-storage = "0.3"
gloo-console = "0.3"
gloo-timers = "0.3"
